--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <meta name="keywords" content="">
 
     <!--website title in tab-->
-    <title></title>
+    <title>www.TIGER.nl</title>
 
     <!--linking a .css page-->
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
