--- a/index.html
+++ b/index.html
@@ -26,14 +26,21 @@
 
     <!--linking a .css page-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    
 </head>
 
 <body>
     <!--body data-->
     <header>
         <!--header data-->
+        <img src="images/logo.png" alt="Logo">
     <nav>
-        
+        <a href="">Home</a>
+        <a href="">Product Info</a>
+        <a href="">Kalender</a>
+        <a href="">Artiesten</a>   
+        <a href="">Aanbiedingen</a>
+        <a href="">Contact</a>
     </nav>
 
     </header>
