--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
     <!--body data-->
     <header>
         <!--header data-->
+        <div></div>
         <img src="images/logo.png" alt="Logo">
-    <nav>
-        <a href="">Home</a>
-        <a href="">Product Info</a>
-        <a href="">Kalender</a>
-        <a href="">Artiesten</a>   
-        <a href="">Aanbiedingen</a>
-        <a href="">Contact</a>
-    </nav>
-
+        <nav>
+            <a href="">Home</a>
+            <a href="">Product Info</a>
+            <a href="">Kalender</a>
+            <a href="">Artiesten</a>   
+            <a href="">Aanbiedingen</a>
+            <a href="">Contact</a>
+        </nav>
+        <div></div>
     </header>
     <footer>
         <!--footer data-->
